<resources>
    <string name="app_name">Fari Bank- Android</string>
    <string name="phone">phone</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="balance">balance:</string>
    <string name="account">Account</string>
    <string name="charge">charge</string>
    <string name="amount">amount</string>
    <string name="Register">Register</string>
    <string name="firstname">first name</string>
    <string name="id">id</string>
    <string name="transactions">transactions</string>
    <string name="contacts">contacts</string>
    <string name="lastname">lastname\n</string>
    <string name="transfer">transfer</string>
    <string name="box">box</string>
    <string name="boxDetailesTest">type\n\ndays\n\nprofited\n\ndate\n\ntime</string>
    <string name="support">support</string>
    <string name="loan">loan</string>
    <string name="addloan">add loan</string>
</resources>